<resources>
    <string name="app_name">MusicMap</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">MapView</string>
    <string name="title_activity_performance_detail">performanceDetail</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_performance_fragment">performanceFragment</string>
    <string name="title_activity_settings">performanceSettings</string>
    <string name="action_profile">Profile</string>
    <string name="action_like">加入收藏</string>

    <!--<>This part is used for setting options-->
    <string name="list_pref_location">地点</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">nanjing</string>

    <string name="pref_location_label_bj">北京</string>
    <string name="pref_location_label_sh">上海</string>
    <string name="pref_location_label_gz">广州</string>
    <string name="pref_location_label_nj">南京</string>

    <string name="pref_location_bj">beijing</string>
    <string name="pref_location_sh">shanghai</string>
    <string name="pref_location_gz">guangzhou</string>
    <string name="pref_location_nj">nanjing</string>

    <string name="pref_dob_value">日期选择</string>
    <string name="pref_dob_key">dob</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">mapActivity</string>

    <string name="pref_duration_key">duration</string>
    <string name="pref_duration_value">查询范围</string>
    <string name="pref_duration_default">all</string>

    <string name="pref_duration_label_week">未来一周</string>
    <string name="pref_duration_label_month">未来一月</string>
    <string name="pref_duration_label_all">未来所有</string>

    <string name="pref_duration_week">week</string>
    <string name="pref_duration_month">month</string>
    <string name="pref_duration_all">all</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="app_login_name">Android Login and Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_favourite">FavouriteActivity</string>

</resources>
