<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_location_key"
        android:title="@string/list_pref_location"
        android:entries="@array/pref_location_options"
        android:defaultValue="@string/pref_location_default"
        android:entryValues="@array/pref_location_values"></ListPreference>

    <com.example.thomas.musicmap.DateDialogPreference
        android:key="@string/pref_dob_key" android:title="@string/pref_dob_value"
        />

    <ListPreference
        android:key="@string/pref_duration_key"
        android:title="@string/pref_duration_value"
        android:entries="@array/pref_duration_options"
        android:entryValues="@array/pref_duration_values"
        android:defaultValue="@string/pref_duration_default"></ListPreference>

</PreferenceScreen>